# GGBoy-Android

./: LICENSE  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  EmulatorAPI.cpp  native-lib.cpp
app/src/main/cpp/include/: Audio.hpp  EmulatorMain.hpp  EmulatorMessage.hpp  InputHandler.hpp  Video.hpp
app/src/main/cpp/src/: Audio.cpp  EmulatorAPI.cpp  EmulatorMain.cpp  EmulatorMessage.cpp  InputHandler.cpp  Video.cpp
app/src/main/java/com/example/ggboy/: DPadView.java  FilePickerActivity.java  GGBoyButton.java  GameButton.java  MainActivity.java  MainActivityLayouting.java  Renderer.java  SaveState.java  SaveStateAdapter.java  SelectSaveStateActivity.java  Utility.java
app/src/main/res/drawable/: ic_launcher_background.xml
app/src/main/res/layout/: activity_main.xml  activity_selectsavestate.xml  bottomsheet_volume.xml  item_savestate.xml
app/src/main/res/layout-land/: activity_main.xml
app/src/main/res/menu/: emulator_menu.xml
app/src/main/res/values/: attrs.xml  strings.xml
gradle/wrapper/: gradle-wrapper.properties
